--- a/deploy/frontend.yaml
+++ b/deploy/frontend.yaml
@@ -1,18 +1,34 @@
-apiVersion: cloud.redhat.com/v1alpha1
-kind: Frontend
+apiVersion: template.openshift.io/v1
+kind: Template
 metadata:
-  name: firelink-frontend
-spec:
-  API:
-    versions:
-      - v1
-  frontend:
-    paths:
-      - /
-  deploymentRepo: https://github.com/RedHatInsights/firelink-frontend
-  image: quay.io/rh_ee_addrew/firelink-frontend:latest
-  module:
-    config:
-      ssoUrl: 'https://'
-    manifestLocation: /apps/chrome/js/fed-mods.json
-  title: Firelink Frontend
+  name: insights-chrome
+objects:
+  - apiVersion: cloud.redhat.com/v1alpha1
+    kind: Frontend
+    metadata:
+      name: firelink-frontend
+    spec:
+      envName: '${ENV_NAME}'
+      API:
+        versions:
+          - v1
+      frontend:
+        paths:
+          - /
+      deploymentRepo: 'https://github.com/RedHatInsights/firelink-frontend'
+      image: '${IMAGE}:${IMAGE_TAG}'
+      module:
+        config:
+          ssoUrl: 'https://'
+        manifestLocation: /apps/chrome/js/fed-mods.json
+      title: Firelink Frontend
+parameters:
+  - name: ENV_NAME
+    description: Frontend Environment Name
+    required: true
+  - name: IMAGE
+    description: Frontend Image
+    required: true
+  - name: IMAGE_TAG
+    description: Frontend Image Tag
+    required: true
