Update caddyfile for SPA

--- a/config/Caddyfile
+++ b/config/Caddyfile
@@ -11,4 +11,12 @@
     log
     root * /opt/app-root/src/build
     file_server
+
+    @notStatic {
+        file
+        not path /static/* /favicon.ico /asset-manifest.json /manifest.json /logo192.png /logo512.png /favicon.ico /robots.txt
+        try_files {path} /index.html
+    }
+    rewrite @notStatic /index.html
+
 }
