--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
+    "react-svg": "^16.1.33",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.4",
     "web-vitals": "^2.1.4"
