--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ markdown_extensions:
 
 nav:
 - Home: index.md
+- Known Issues: known_issues.md
 - Namespaces: namespaces.md
 - Apps: apps.md
 - Cluster: cluster.md
